# kegg-cli

./: .gitignore  README.md  kegg-cli-0.1.0.r9.g8090b77-1-any.pkg.tar.zst  pyproject.toml
.github/workflows/: package-drift.yml  release-drift.yml  release.yml
config/: default-config.toml
packaging/arch/src/: kegg_cli.py
src/kegg_cli/: cache.py  client.py  core.py  parser.py
tests/: test_kegg_cache.py  test_kegg_cli.py  test_kegg_client.py  test_kegg_parser.py
