[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kegg-cli"
version = "0.1.0"
description = "Command-line client for the KEGG REST API with bounded disk caching"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "0BSD" }
dependencies = [
  "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/decent-tools-for-thought/kegg-cli"
Repository = "https://github.com/decent-tools-for-thought/kegg-cli"
Issues = "https://github.com/decent-tools-for-thought/kegg-cli/issues"
Documentation = "https://www.kegg.jp/kegg/rest/keggapi.html"

[dependency-groups]
dev = [
  "build>=1.2.2",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.13.1",
]

[project.scripts]
kegg = "kegg_cli.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
files = ["src/kegg_cli", "tests"]
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
